// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CellTitle actions should NOT render the actions when no actions key is provided 1`] = `
<div
  className="tc-list-title"
  id="24/7-1-title-cell"
>
  <CellTitleSelector
    cellData="Licensed Savings Account"
    className={undefined}
    displayMode="text"
    id="24/7-1-title-cell"
    onClick={undefined}
    onEditCancel={undefined}
    onEditSubmit={undefined}
    rowData={
      Object {
        "actions": Array [
          Object {
            "icon": "talend-pencil",
            "label": "edit",
            "onClick": [Function],
          },
          Object {
            "icon": "talend-trash",
            "label": "delete",
            "onClick": [Function],
          },
        ],
        "id": 1,
        "title": "Home Loan Account Table Computer",
      }
    }
  />
</div>
`;

exports[`CellTitle actions should NOT render the actions when rowData has no actions 1`] = `
<div
  className="tc-list-title"
  id="syndicate-1-title-cell"
>
  <CellTitleSelector
    cellData="Mississippi Refined Rubber Chicken Table"
    className={undefined}
    displayMode="text"
    id="syndicate-1-title-cell"
    onClick={undefined}
    onEditCancel={undefined}
    onEditSubmit={undefined}
    rowData={
      Object {
        "actions": undefined,
        "id": 1,
        "title": "Home Loan Account Table Computer",
      }
    }
  />
</div>
`;

exports[`CellTitle actions should render the actions 1`] = `
<div
  className="tc-list-title"
  id="enable-1-title-cell"
>
  <CellTitleSelector
    cellData="zero administration"
    className={undefined}
    displayMode="text"
    id="enable-1-title-cell"
    onClick={undefined}
    onEditCancel={undefined}
    onEditSubmit={undefined}
    rowData={
      Object {
        "actions": Array [
          Object {
            "icon": "talend-pencil",
            "label": "edit",
            "onClick": [Function],
          },
          Object {
            "icon": "talend-trash",
            "label": "delete",
            "onClick": [Function],
          },
        ],
        "id": 1,
        "title": "Home Loan Account Table Computer",
      }
    }
  />
  <Actions
    actions={
      Array [
        Object {
          "icon": "talend-pencil",
          "label": "edit",
          "onClick": [Function],
        },
        Object {
          "icon": "talend-trash",
          "label": "delete",
          "onClick": [Function],
        },
      ]
    }
    hideLabel={true}
    link={true}
  />
</div>
`;

exports[`CellTitle icon should NOT render the icon when no iconKey is provided 1`] = `
<div
  className="tc-list-title"
  id="Officer-1-title-cell"
>
  <CellTitleSelector
    cellData="methodology Albania"
    className={undefined}
    displayMode="text"
    id="Officer-1-title-cell"
    onClick={undefined}
    onEditCancel={undefined}
    onEditSubmit={undefined}
    rowData={
      Object {
        "icon": "talend-file-o",
        "id": 1,
        "title": "mobile Fish",
      }
    }
  />
</div>
`;

exports[`CellTitle icon should NOT render the icon when the rowData has no icon value 1`] = `
<div
  className="tc-list-title"
  id="web-readiness-1-title-cell"
>
  <CellTitleSelector
    cellData="Namibia"
    className={undefined}
    displayMode="text"
    id="web-readiness-1-title-cell"
    onClick={undefined}
    onEditCancel={undefined}
    onEditSubmit={undefined}
    rowData={
      Object {
        "icon": undefined,
        "id": 1,
        "title": "mobile Fish",
      }
    }
  />
</div>
`;

exports[`CellTitle icon should render the icon 1`] = `
<div
  className="tc-list-title"
  id="parsing-1-title-cell"
>
  <Icon
    className={undefined}
    name="talend-file-o"
  />
  <CellTitleSelector
    cellData="Electronics"
    className={undefined}
    displayMode="text"
    id="parsing-1-title-cell"
    onClick={undefined}
    onEditCancel={undefined}
    onEditSubmit={undefined}
    rowData={
      Object {
        "icon": "talend-file-o",
        "id": 1,
        "title": "mobile Fish",
      }
    }
  />
</div>
`;

exports[`CellTitle should render title selector component 1`] = `
<div
  className="tc-list-title"
  id="Practical Fresh Pants-1-title-cell"
>
  <CellTitleSelector
    cellData="Producer"
    className={undefined}
    displayMode="text"
    id="Practical Fresh Pants-1-title-cell"
    onClick={[Function]}
    onEditCancel={[Function]}
    onEditSubmit={[Function]}
    rowData={
      Object {
        "displayMode": "text",
        "icon": "talend-file-o",
        "id": 1,
        "title": "Metal deposit",
      }
    }
  />
</div>
`;
